Attempt fixed background on mobile

--- a/_assets/css/_bootstrap_variables.scss
+++ b/_assets/css/_bootstrap_variables.scss
@@ -85,8 +85,8 @@ $border-width:               1px !default;
 //
 // Settings for the `<body>` element.
 
-$body-bg:                    #fff !default;
-$body-color:                 $gray-dark !default;
+$body-bg:                    #000 !default;
+$body-color:                 #fff !default;
 
 
 // Links
