--- a/_assets/css/custom/_starter-template.scss
+++ b/_assets/css/custom/_starter-template.scss
@@ -1,45 +1,55 @@
 // Bootstrap Starter Template with navbar floating right
 
-body {
-  color: #fff;
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
   background-image: url(image_path('circuit_bg_dark_xsv.jpg'));
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-color: #000;
+  background-position: center, center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 @media (min-width: 481px) {
-	body {
+	body:before {
 		background-image: url(image_path('circuit_bg_dark_sm.jpg'));
 	}
 }
 
 @media (min-height: 721px) {
-	body {
+	body:before {
 		background-image: url(image_path('circuit_bg_dark_smv.jpg'));
 	}
 }
 
 @media (min-width: 769px) {
-	body {
+	body:before {
 		background-image: url(image_path('circuit_bg_dark_1k.jpg'));
 	}
 }
 
 @media (min-height: 1281px) {
-	body {
+	body:before {
 		background-image: url(image_path('circuit_bg_dark_1kv.jpg'));
 	}
 }
 
 @media (min-height: 1281px) and (min-width: 1081px) {
-	body {
+	body:before {
 		background-image: url(image_path('circuit_bg_dark_2k.jpg'));
 	}
 }
 
 @media (min-width: 2561px) {
-	body {
+	body:before {
 		background-image: url(image_path('circuit_bg_dark_4k.jpg'));
 	}
 }
